--- a/index.html
+++ b/index.html
@@ -4,10 +4,95 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Donation</title>
+    <title>Our Donation</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="new.css">
 </head>
+
 <body>
-    <p id="go">hii</p>
+    <section class="background margin">
+    <h1 class="one">Lets Help SYLHET. <br> They Need Your Help</h1>
+    <i><p class="two"> Donate more for the flood victims of Sylhet <br>Sylhet need help. </p></i> <br>
+    <a class="button" target="_blank" href="">Donate Now</a>
+    </section>
+
+    <section class="margin">
+        <div>
+            <h1 class="three">Please Donate</h1>
+            <p class="four">Donate your money for flood victims of Sylhet. <br> They need your help soon.</p>
+        </div>
+        <div class="flexi">
+            <div class="five">
+                <h1>100tk</h1>
+            </div>
+            <div class="five">
+                <h1>200tk</h1>
+            </div>
+            <div class="five">
+                <h1>500tk</h1>
+            </div>
+            <div class="six">
+                <h1>1000tk</h1>
+            </div>
+            <div class="five">
+                <h1>5000tk</h1>
+            </div>
+        </div>
+        <div class="four">
+            <input type="number">
+            <p>Other Amount(Taka)</p>
+            <a class="buttonone" target="_blank" href="">Donate Now</a>
+        </div>
+    </section>
+
+    <section class="margin">
+        <div>
+            <h1 class="three">Our Donation Plan</h1>
+                <p class="four">Here are the details of our donation plane. <br>  Please take a look and help</p>
+        </div>
+        <div class="flexi">
+            <div id="seven">
+                <img src="images/food.png" alt="">
+                <h3>Food for all family</h3>
+                <p>Food is essential for every family in Sylhet. Thats why food is our first priority in this donation mission for them.</p>
+            </div>
+            <div id="eight">
+                <img src="images/shelter.png" alt="">
+                <h3>Shelter for all family</h3>
+                <p>Shelter is also very necessary thing for everyone. For this reason we are hardly trying to give shelter to every family in Sylhet</p>
+            </div>
+            <div id="nine">
+                <img src="images/Frame-1.png" alt="">
+                <h3>Education for child</h3>
+                <p>Edcation is too much necessary for every child. Thats why we are going to create a camp 'Education for Every Chlid'</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="margin">
+        <div class="flexii">
+            <div>
+                <h1 class="half">The Flood Victims of Sylhet Need Your Help</h1>
+                <p>Food is essential for every family in Sylhet. <br> Peapole can not live without food. They <br> need your help as soon as possible.</p>
+                <button class="buttonone">Contribute</button>
+            </div>
+            <div class="half">
+                <img src="images/ok.jpg" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="margin">
+        <div>
+            <h1 class="three">Get My Updates</h1>
+                <p class="four">For Updates give us your email. <br> You can also subscribe us.</p>
+        </div>
+        <div id="ten">
+            <input type="email" placeholder="Enter" />
+            <button>Subscribe</button>
+        </div>
+    </section>
 </body>
+
 </html>
