--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/logo.jpg">
     <link rel="stylesheet" href="new.css">
 </head>
 
@@ -93,6 +94,10 @@
             <button>Subscribe</button>
         </div>
     </section>
-</body>
 
+</body>
+<footer>
+    <b><i><h1 id="red">Be Humble</h1></i></b>
+    <p>I'm gonna do it</p>
+</footer>
 </html>
